2010-03-02  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Rationalise path identification for XML file locations.

	* src/sysroot.cpp (pkgXmlDocument::LoadSystemMap): Use `xmlfile()'
	function to locate `sysroot' map file; free memory when done.
	(pkgXmlDocument::UpdateSystemMap): Likewise.

2010-03-01  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Extend package name search to include component packages.

	* src/pkgfind.cpp (pkgHasMatchingName): Remove; fold it into...
	(pkgXmlNode::FindPackageByName): ...this; augment to extend search
	within package definition elements, seeking a potential match on an
	included component package name or component class-implied name.

	* src/pkgkeys.h (class_key): New global string constant; declare it.
	* src/pkgkeys.c (class_key): Implement it.

2010-02-16  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Bump version for next release cycle.

	* configure.ac (AC_INIT): Bump version suffix to alpha-2.

2010-02-16  Keith Marshall  <keithmarshall@users.sourceforge.net>

	mingw-get-0.1-mingw32-alpha-1 released.

2010-02-16  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Prepare initial package release.

	* README: New file; use it to source release notes.

	* Makefile.in (SRCDIST_FILES): Use ...
	(LICENCE_FILES): ...this new macro; define it.
	(licdist): New build goal; implement it.
	(bindist): Require it; add alternative `zip' format package.

	* src/profile (repository): Set default `package-index' name.
	(system-map): Normalise spelling for default `sysroot' path names.

2010-02-10  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Add directory/file records in installation manifests.

	* src/pkgkeys.h (dirname_key, filename_key): New strings; declare...
	* src/pkgkeys.c (dirname_key, filename_key): ...and implement them.

	* src/pkgproc.h (pkgArchiveProcessor::installed): New class member
	variable; declare it.
	(pkgTarArchiveInstaller::UpdateInstallationManifest): New method;